--- a/configs/itop4412_defconfig
+++ b/configs/itop4412_defconfig
@@ -40,7 +40,8 @@ CONFIG_USB=y
 CONFIG_DM_USB=y
 CONFIG_USB_EHCI_EXYNOS=y
 CONFIG_CMD_USB=y
-#CONFIG_CMD_GPIO=y
+CONFIG_CMD_DFU=y
+CONFIG_CMD_GPIO=y
 CONFIG_DM_ETH=y
 CONFIG_BOOTDELAY=5
 CONFIG_USB_GADGET=y
@@ -52,8 +53,33 @@ CONFIG_USB_GADGET_DOWNLOAD=y
 CONFIG_USB_FUNCTION_THOR=y
 
 CONFIG_CMD_LED=y
+
 # LED Support
 #
 CONFIG_LED=y
 CONFIG_LED_BLINK=y
 CONFIG_LED_GPIO=y
+
+CONFIG_CMD_BEEP=y
+CONFIG_CLK=y
+CONFIG_USB_FUNCTION_DFU=y
+# CONFIG_DFU_MMC is not set
+CONFIG_DM_PWM=y
+CONFIG_PWM_EXYNOS=y
+# CONFIG_PWM_TEGRA is not set
+
+CONFIG_USB_HOST=y
+CONFIG_USB_EHCI_HCD=y
+CONFIG_USB_EHCI=y
+CONFIG_USB_EHCI_GENERIC=y
+
+CONFIG_USB_STORAGE=y
+CONFIG_USB_GADGET=y
+CONFIG_USB_GADGET_VBUS_DRAW=2
+CONFIG_USB_GADGET_DUALSPEED=y
+CONFIG_USB_GADGET_DOWNLOAD=y
+
+CONFIG_G_DNL_MANUFACTURER="samsung"
+CONFIG_G_DNL_VENDOR_NUM=0x04E8
+CONFIG_G_DNL_PRODUCT_NUM=0x685D
+CONFIG_USBNET_DEVADDR="de:ad:be:ef:00:01"
