--- a/configs/itop4412_defconfig
+++ b/configs/itop4412_defconfig
@@ -267,7 +267,7 @@ CONFIG_BOOTSTAGE_STASH_SIZE=0x1000
 # CONFIG_SATA_BOOT is not set
 # CONFIG_SD_BOOT is not set
 # CONFIG_SPI_BOOT is not set
-CONFIG_BOOTDELAY=5
+CONFIG_BOOTDELAY=3
 # CONFIG_USE_BOOTARGS is not set
 # CONFIG_USE_BOOTCOMMAND is not set
 # CONFIG_USE_PREBOOT is not set
@@ -510,6 +510,7 @@ CONFIG_CMD_MEMORY=y
 # CONFIG_CMD_DEMO is not set
 CONFIG_CMD_DFU=y
 CONFIG_CMD_DM=y
+CONFIG_CMD_FASTBOOT=y
 # CONFIG_CMD_FPGAD is not set
 # CONFIG_CMD_FUSE is not set
 CONFIG_CMD_GPIO=y
@@ -541,7 +542,7 @@ CONFIG_CMD_SF=y
 # CONFIG_CMD_UNIVERSE is not set
 CONFIG_CMD_USB=y
 # CONFIG_CMD_USB_SDP is not set
-# CONFIG_CMD_USB_MASS_STORAGE is not set
+CONFIG_CMD_USB_MASS_STORAGE=y
 
 #
 # Shell scripting commands
@@ -788,8 +789,17 @@ CONFIG_DFU_OVER_USB=y
 #
 # Fastboot support
 #
-# CONFIG_USB_FUNCTION_FASTBOOT is not set
+CONFIG_FASTBOOT=y
+CONFIG_USB_FUNCTION_FASTBOOT=y
 # CONFIG_UDP_FUNCTION_FASTBOOT is not set
+CONFIG_FASTBOOT_BUF_ADDR=0x70000000
+CONFIG_FASTBOOT_BUF_SIZE=0x100000
+CONFIG_FASTBOOT_USB_DEV=0
+CONFIG_FASTBOOT_FLASH=y
+CONFIG_FASTBOOT_FLASH_MMC=y
+CONFIG_FASTBOOT_FLASH_MMC_DEV=0
+CONFIG_FASTBOOT_GPT_NAME="gpt"
+CONFIG_FASTBOOT_MBR_NAME="mbr"
 # CONFIG_FIRMWARE is not set
 # CONFIG_ZYNQMP_FIRMWARE is not set
 
@@ -1247,7 +1257,7 @@ CONFIG_USB_EHCI_GENERIC=y
 # CONFIG_USB_MUSB_TI is not set
 # CONFIG_USB_MUSB_AM35X is not set
 # CONFIG_USB_MUSB_DSPS is not set
-# CONFIG_USB_MUSB_PIO_ONLY is not set
+CONFIG_USB_MUSB_PIO_ONLY=y
 
 #
 # USB Phy
@@ -1270,7 +1280,7 @@ CONFIG_SYS_USB_EVENT_POLL=y
 # CONFIG_SYS_USB_EVENT_POLL_VIA_INT_QUEUE is not set
 # CONFIG_SYS_USB_EVENT_POLL_VIA_CONTROL_EP is not set
 CONFIG_USB_GADGET=y
-CONFIG_USB_GADGET_MANUFACTURER="U-Boot"
+CONFIG_USB_GADGET_MANUFACTURER="samsung"
 CONFIG_USB_GADGET_VENDOR_NUM=0x04E8
 CONFIG_USB_GADGET_PRODUCT_NUM=0x685D
 # CONFIG_USB_GADGET_ATMEL_USBA is not set
@@ -1281,15 +1291,11 @@ CONFIG_USB_GADGET_DWC2_OTG=y
 CONFIG_USB_GADGET_VBUS_DRAW=2
 CONFIG_USB_GADGET_DUALSPEED=y
 CONFIG_USB_GADGET_DOWNLOAD=y
-# CONFIG_USB_FUNCTION_MASS_STORAGE is not set
+CONFIG_USB_FUNCTION_MASS_STORAGE=y
 # CONFIG_USB_FUNCTION_ROCKUSB is not set
 # CONFIG_USB_FUNCTION_SDP is not set
-CONFIG_USB_FUNCTION_THOR=y
-CONFIG_USB_ETHER=y
-# CONFIG_USB_ETH_CDC is not set
-CONFIG_USB_ETH_RNDIS=y
-CONFIG_USBNET_DEVADDR="de:ad:be:ef:00:01"
-CONFIG_USBNET_HOST_ADDR="de:ad:be:ef:00:00"
+# CONFIG_USB_FUNCTION_THOR is not set
+# CONFIG_USB_ETHER is not set
 # CONFIG_USB_HOST_ETHER is not set
 
 #
@@ -1378,6 +1384,8 @@ CONFIG_SPRINTF=y
 CONFIG_SPL_SPRINTF=y
 CONFIG_STRTO=y
 CONFIG_SPL_STRTO=y
+CONFIG_IMAGE_SPARSE=y
+CONFIG_IMAGE_SPARSE_FILLBUF_SIZE=0x80000
 CONFIG_USE_PRIVATE_LIBGCC=y
 CONFIG_SYS_HZ=1000
 CONFIG_SPL_USE_TINY_PRINTF=y
